skeplib/tests/fixtures/sema/invalid/function_literal_capture.sk
fn main() -> Int {
  let y = 9;
  let f: Fn(Int) -> Int = fn(x: Int) -> Int {
    return x + y;
  };
  return f(1);
}
